--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="margin:0">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="../src/assets/burger-queen.png" />
